--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
-        "orchestra/testbench": "^4.0"
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
